--- a/landingPage.html
+++ b/landingPage.html
@@ -105,7 +105,7 @@
       </section>
 
       <!--VERSION DE HILUX-->
-      <section versionHiluxPrincipal>
+      <section class="versionHiluxPrincipal">
         <div class="versionHilux" style="text-align: center; padding: 2em;">
           <h1 style="font-weight: bolder;padding: 1em; margin-block-end:-0.5em">Elegí tu versión de HILUX</h1>
         <h5>Modelos y precios</h5>
@@ -117,7 +117,7 @@
                 <div id="carouselExampleIndicators" class="carousel slide">
                   <div class="conteiner" style="position: relative; margin-top: -3em">
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="carousel-control-prev-icon" aria-hidden="true" style="color: black;"></span>
                       <span class="visually-hidden" style="color: black;">Previous</span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
@@ -134,7 +134,7 @@
                           <img src="/images/Recurso 2-20.jpg" class="img-fluid rounded-start" alt="auto01" style="width: 50em;">
                         </div>
                         <div class="col-12 col-md-6 justify-content-center">
-                          <div style="text-align:left;">
+                          <div class="imagenesC" style="text-align:left;">
                             <h2 style="margin-left: 1em;font-weight: bolder">HILUX DX 4X4</h2>
                             <a href="">
                               <h6 style="margin-left: 1em; font-size: medium;">Ver ficha técnica                     ></h6>
@@ -242,6 +242,21 @@
             </div>
           </div>
         </div>
+
+        <div class="circuloPadre" style="text-align: center;">
+          <div class="row" style="align-items: end;display: flex;">
+            <div class="circulo"></div>
+            <div class="circulo1"></div>
+            <div class="circulo2"></div>
+            <div class="circulo3"></div>
+            <div class="circulo4"></div>
+            <div class="circulo5"></div>
+          </div>
+        </div>
+
+
+
+        
 
       </section>
 
@@ -402,7 +417,7 @@
             </div>
 
             <div class="col-6 col-md-3">
-              <article>
+              <article class="vp">
                 <h5 class="TitulosFooter" >VENTAS</h5>
                 <p class="small text-dark mb-1">Casa Central | Av. Rivadavia 8981, CABA</p>
                 <p class="small text-dark">Tel: (011) 4670-7000</p>
@@ -414,7 +429,7 @@
             </div>
 
             <div class="col-6 col-md-3">
-              <article>
+              <article class="vp">
                 <h5 class="TitulosFooter">POSVENTA</h5>
                 <p class="small text-dark mb-1">Villa Luro | Yerbal 4586, CABA</p>
                 <p class="small text-dark mb-1">Caballito | Donato Álvarez 1350, CABA</p>
